<resources>
    <string name="app_name"> BoaViagem </string>
    <string name="usuario"> Usuário: </string>
    <string name="senha"> Senha: </string>
    <string name="entrar"> Entrar </string>
    <string name="erro_autenticacao"> Usuário ou senha inválidos! </string>
    <string name="novo_gasto"> Novo Gasto </string>
    <string name="nova_viagem"> Nova Viagem </string>
    <string name="minhas_viagens"> Minhas Viagens </string>
    <string name="configuracoes"> Configurações </string>
    <string name="destino"> Destino </string>
    <string name="tipo_da_viagem"> Tipo da viagem </string>
    <string name="lazer"> Lazer </string>
    <string name="negocios"> Negócios </string>
    <string name="data_da_chegada"> Data da chegada </string>
    <string name="data_da_saida"> Data da saída </string>
    <string name="selecione"> Selecione </string>
    <string name="orcamento"> Orçamento </string>
    <string name="quantidade_de_pessoas"> Quantidade de pessoas </string>
    <string name="salvar" > Salvar </string>
    <string name="criar_nova_viagem">Criar nova viagem</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="gastei">Gastei!</string>
    <string name="local">Local</string>
    <string name="categoria">Categoria</string>
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover Viagem</string>
    <string name="remover_gasto">Remover Gasto</string>
    <string name="remover">Remover</string>
    <string name="gastos_realizados">Gastos Realizados</string>
    <string name="editar">Editar</string>
    <string name="opcoes">Opções</string>
    <string name="confirmacao_exclusao_viagem">Deseja realmente remover a viagem?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="modo_viagem_sumario">Determina a viagem ativa com base na data atual</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="preferencias">Preferências</string>
    <string name="informe_valor_limite">Informe o valor limite (em %)</string>
    <string name="valor_limite_sumario">Notifica quando os gastos ultrapassarem o percentual informado</string>
    <string name="valor_limite">Alerta de gastos</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="registro_salvo">Registro salvo com sucesso!</string>
    <string name="erro_salvar">Erro ao salvar!</string>
    <string name="menu">Menu</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

</resources>
